# RdcAutomation

./: .gitattributes  .gitignore  README.md  pyproject.toml
docs/: gui-manual-acceptance.md  manual-acceptance.md
docs/superpowers/plans/: 2026-06-09-rdc-auto-implementation.md  2026-06-22-rdc-automation-gui-exe.md
docs/superpowers/specs/: 2026-06-09-rdc-auto-design.md
html-ui-prototype/: README.md  index.html
installers/: README.md
rdc_auto/: __main__.py  capture.py  capture_bridge.py  cli.py  config.py  emulator.py  errors.py  export_assets.py  log_setup.py  mcp_client.py  mcp_installer.py  mcp_patch.py  mesh_convert.py  operations.py  paths.py  processes.py  prompts.py  renderdoc_installer.py
rdc_auto/gui/: __main__.py  app.py  bridge.py  jobs.py  paths.py  status.py
rdc_auto/gui/static/: index.html
renderdoc_mcp/: LICENSE  pyproject.toml
renderdoc_mcp/mcp_server/: server.py
renderdoc_mcp/renderdoc_extension/: __init__.py  extension.json  renderdoc_facade.py  request_handler.py  socket_server.py
renderdoc_mcp/scripts/: install_extension.py
scripts/: bootstrap.ps1  build_exe.ps1  build_gui_exe.ps1
skills/rdc-auto/: SKILL.md
tests/: conftest.py  test_build_gui_exe.py  test_capture_bridge.py  test_capture_service.py  test_cli.py  test_config.py  test_export_assets.py  test_gui_bridge.py  test_gui_jobs.py  test_gui_static.py  test_html_ui_prototype.py  test_mcp_client.py  test_mcp_installer.py  test_mcp_patch.py  test_mesh_convert.py  test_operations.py  test_paths_emulator.py  test_processes.py  test_renderdoc_installer.py
(+10 files in other folders)
