[project]
name = "rdc-auto"
version = "0.1.0"
description = "RenderDoc automation for MuMu12 capture and asset export"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
rdc-auto = "rdc_auto.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pyinstaller>=6.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
